--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.18.3",
         "dotenv": "^6.1.0",
+        "express": "^4.16.4",
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.23",
         "mongoose": "^5.3.14",
